(feat) proxy server: dockerfile + req

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,5 @@
 openai
-python-dotenv
-tiktoken
-importlib-metadata
-tokenizers
-click
-jinja2
-certifi
-appdirs
-backoff
-boto3
-uvicorn
 fastapi
-tomli
-appdirs
-tomli-w
+uvicorn
+boto3
+litellm
