--- a/openai-proxy/.env.template
+++ b/openai-proxy/.env.template
@@ -1,5 +1,15 @@
 OPENAI_API_KEY = ""
 
+HUGGINGFACE_API_KEY="" 
+
+TOGETHERAI_API_KEY=""
+
+REPLICATE_API_KEY="" 
+
+## bedrock / sagemaker
+AWS_ACCESS_KEY_ID = "" 
+AWS_SECRET_ACCESS_KEY = ""
+
 AZURE_API_KEY = ""
 AZURE_API_BASE = ""
 AZURE_API_VERSION = ""
@@ -8,3 +18,17 @@ ANTHROPIC_API_KEY = ""
 
 COHERE_API_KEY = ""
 
+## LOGGING ## 
+
+### LANGFUSE
+LANGFUSE_PUBLIC_KEY = ""
+LANGFUSE_SECRET_KEY = ""
+# Optional, defaults to https://cloud.langfuse.com
+LANGFUSE_HOST = "" # optional
+
+## CACHING ## 
+
+### REDIS
+REDIS_HOST = "" 
+REDIS_PORT = "" 
+REDIS_PASSWORD = "" 
