fix(openai-proxy): add set_verbose flag for proxy to see logs

--- a/openai-proxy/.env.template
+++ b/openai-proxy/.env.template
@@ -20,11 +20,14 @@ COHERE_API_KEY = ""
 
 ## LOGGING ## 
 
+SET_VERBOSE = "False" # set to 'True' to see detailed input/output logs
+
 ### LANGFUSE
 LANGFUSE_PUBLIC_KEY = ""
 LANGFUSE_SECRET_KEY = ""
 # Optional, defaults to https://cloud.langfuse.com
 LANGFUSE_HOST = "" # optional
+
 
 ## CACHING ## 
 
