--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,15 +24,15 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository }}
+          images: ghcr.io/${{ github.repository,, }}
       - name: Get tag to build
         id: tag
         run: |
-          echo "latest=ghcr.io/${{ github.repository }}:latest" >> $GITHUB_OUTPUT
+          echo "latest=ghcr.io/${{ github.repository,, }}:latest" >> $GITHUB_OUTPUT
           if [[ -z "${{ github.event.inputs.tag }}" ]]; then
-            echo "versioned=ghcr.io/${{ github.repository }}:${{ github.ref_name }}" >> $GITHUB_OUTPUT
+            echo "versioned=ghcr.io/${{ github.repository,, }}:${{ github.ref_name }}" >> $GITHUB_OUTPUT
           else
-            echo "versioned=ghcr.io/${{ github.repository }}:${{ github.event.inputs.tag }}" >> $GITHUB_OUTPUT
+            echo "versioned=ghcr.io/${{ github.repository,, }}:${{ github.event.inputs.tag }}" >> $GITHUB_OUTPUT
           fi
       - name: Build and release Docker images
         uses: docker/build-push-action@v5
