(feat) proxy server add auth strategyto template

--- a/openai-proxy/.env.template
+++ b/openai-proxy/.env.template
@@ -1,3 +1,6 @@
+# set AUTH STRATEGY FOR LLM APIs - Defaults to using Environment Variables
+AUTH_STRATEGY = "ENV" # ENV or DYNAMIC, ENV always reads from environment variables, DYNAMIC reads request headers to set LLM api keys
+
 OPENAI_API_KEY = ""
 
 HUGGINGFACE_API_KEY="" 
