--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
             pip install appdirs
             pip install langchain
             pip install numpydoc
-            pip install traceloop-sdk
+            pip install traceloop-sdk==0.0.69
       - save_cache:
           paths:
             - ./venv
