feat(completion()): enable setting prompt templates via completion()

--- a/litellm_server/.env.template
+++ b/litellm_server/.env.template
@@ -21,6 +21,9 @@ ANTHROPIC_API_KEY = ""
 
 COHERE_API_KEY = ""
 
+## CONFIG FILE ## 
+# CONFIG_FILE_PATH = ""  # uncomment to point to config file  
+
 ## LOGGING ## 
 
 SET_VERBOSE = "False" # set to 'True' to see detailed input/output logs
