--- a/litellm_server/Dockerfile
+++ b/litellm_server/Dockerfile
@@ -7,4 +7,4 @@ RUN pip install -r requirements.txt
 
 EXPOSE $PORT 
 
-CMD exec uvicorn main:app --host 0.0.0.0 --port $PORT
+CMD exec uvicorn main:app --host 0.0.0.0 --port $PORT --workers 10 
