dockerfile with possibility to change the python version

--- a/litellm_server/Dockerfile
+++ b/litellm_server/Dockerfile
@@ -1,4 +1,5 @@
-FROM python:3.10
+ARG PYTHON_VERSION=3.11
+FROM python:${PYTHON_VERSION}
 
 ENV LITELLM_CONFIG_PATH="/litellm.secrets.toml"
 COPY . /app
