--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,9 @@ backoff = {extras = ["server"], version = "^2.2.1"}
 pyyaml = {extras = ["server"], version = "^6.0.1"}
 json5 = "^0.9.14"
 contextvars = "^2.4"
+posthog = {extras = ["utils"], version = "^3.0.2"}
+slack-bolt = {extras = ["utils"], version = "^1.18.0"}
+sentry-sdk = {extras = ["utils"], version = "^1.35.0"}
 
 [tool.poetry.scripts]
 litellm = 'litellm:run_server'
@@ -37,6 +40,7 @@ litellm = 'litellm:run_server'
 [tool.poetry.group.dev.dependencies]
 black = ">=23.11.0"
 pydantic-core = "^2.14.1"
+pre-commit = "^3.5.0"
 
 [build-system]
 requires = ["poetry-core"]
