--- a/litellm/proxy/config.yaml
+++ b/litellm/proxy/config.yaml
@@ -4,17 +4,22 @@ model_list:
       model: huggingface/HuggingFaceH4/zephyr-7b-alpha
       max_tokens: 20
       temperature: 0
-  - model_name: gpt-4
-    litellm_params: # params for litellm.completion() - https://docs.litellm.ai/docs/completion/input#input---request-body
-      model: gpt-4
+  - model_name: gpt-4-team1
+    litellm_params:
+      model: azure/chatgpt-v-2
+      api_base: https://openai-gpt-4-test-v-1.openai.azure.com/
+      api_version: "2023-05-15"
+      azure_ad_token: eyJ0eXAiOiJ
+  - model_name: gpt-4-team2
+    litellm_params:
+      model: azure/gpt-4
       api_key: sk-123
-  - model_name: mistral-7b
-    litellm_params: # params for litellm.completion() - https://docs.litellm.ai/docs/completion/input#input---request-body
-      model: deepinfra/mistralai/Mistral-7B-Instruct-v0.1
-      api_key: sk-1234
+      api_base: https://openai-gpt-4-test-v-2.openai.azure.com/
+  - model_name: gpt-4-team3
+    litellm_params:
+      model: azure/gpt-4
+      api_key: sk-123
 
 litellm_settings:
   drop_params: True
 
-general_settings: 
-  master_key: sk-12345
