--- a/litellm/proxy/example_config_yaml/load_balancer.yaml
+++ b/litellm/proxy/example_config_yaml/load_balancer.yaml
@@ -24,5 +24,5 @@ model_list: # use the same model_name for using the litellm router. LiteLLM will
 
 environment_variables:
   REDIS_HOST: localhost
-  REDIS_PASSWORD: "eYVX71"
-  REDIS_PORT: 6329
+  REDIS_PASSWORD: 
+  REDIS_PORT: 
