fix(proxy_server.py): allow user to connect their proxy to a postgres db

--- a/litellm/proxy/config.yaml
+++ b/litellm/proxy/config.yaml
@@ -2,27 +2,16 @@ model_list:
   - model_name: zephyr-alpha
     litellm_params: # params for litellm.completion() - https://docs.litellm.ai/docs/completion/input#input---request-body
       model: huggingface/HuggingFaceH4/zephyr-7b-alpha
-      max_tokens: 20
-      temperature: 0
-  - model_name: gpt-4-team1
+      api_base: http://0.0.0.0:8001
+  - model_name: zephyr-beta
     litellm_params:
-      model: azure/chatgpt-v-2
-      api_base: https://openai-gpt-4-test-v-1.openai.azure.com/
-      api_version: "2023-05-15"
-      azure_ad_token: eyJ0eXAiOiJ
-  - model_name: gpt-4-team2
-    litellm_params:
-      model: azure/gpt-4
-      api_key: sk-123
-      api_base: https://openai-gpt-4-test-v-2.openai.azure.com/
-  - model_name: gpt-4-team3
-    litellm_params:
-      model: azure/gpt-4
-      api_key: sk-123
-  - model_name: ollama/zephyr
-    litellm_params:
-        model: ollama/zephyr
+      model: huggingface/HuggingFaceH4/zephyr-7b-beta
+      api_base: https://<my-hosted-endpoint>
 
 litellm_settings:
   drop_params: True
-  success_callback: ["langfuse"] # https://docs.litellm.ai/docs/observability/langfuse_integration
+  set_verbose: True
+
+general_settings: 
+  master_key: sk-1234 # [OPTIONAL] Only use this if you to require all calls to contain this key (Authorization: Bearer sk-1234)
+  database_url: "postgresql://<user>:<password>@<host>:<port>/<dbname>" # [OPTIONAL] use for token-based auth to proxy
