--- a/litellm/deprecated_litellm_server/Dockerfile
+++ b/litellm/deprecated_litellm_server/Dockerfile
@@ -1,10 +1,10 @@
-FROM python:3.10
+# FROM python:3.10
 
-ENV LITELLM_CONFIG_PATH="/litellm.secrets.toml"
-COPY . /app
-WORKDIR /app
-RUN pip install -r requirements.txt
+# ENV LITELLM_CONFIG_PATH="/litellm.secrets.toml"
+# COPY . /app
+# WORKDIR /app
+# RUN pip install -r requirements.txt
 
-EXPOSE $PORT 
+# EXPOSE $PORT 
 
-CMD exec uvicorn main:app --host 0.0.0.0 --port $PORT --workers 10 
+# CMD exec uvicorn main:app --host 0.0.0.0 --port $PORT --workers 10 
