Add symlink and only copy in source dir to stay under 50MB compressed limit for Lambdas.

--- a/template.yaml
+++ b/template.yaml
@@ -45,8 +45,8 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       FunctionName: !Sub "${AWS::StackName}-llmlite"
-      CodeUri: "./"
-      Handler: litellm/proxy/lambda.lambda_handler
+      CodeUri: "./litellm"
+      Handler: proxy/lambda.lambda_handler
       Runtime: python3.11
       AutoPublishAlias: !Ref AliasParameter
       Role: !GetAtt LambdaExecutionRole.Arn
