--- a/proxy_server_config.yaml
+++ b/proxy_server_config.yaml
@@ -4,12 +4,11 @@ model_list:
       model: azure/chatgpt-v-2
       api_base: https://openai-gpt-4-test-v-1.openai.azure.com/
       api_version: "2023-05-15"
-      api_key: 
-      rpm: 200
+      api_key: os.environ/AZURE_API_KEY1 # The `os.environ/` prefix tells litellm to read this from the env 
   - model_name: gpt-4
     litellm_params:
       model: azure/gpt-4
-      api_key: 
+      api_key: os.environ/AZURE_API_KEY2
       api_base: https://openai-gpt-4-test-v-2.openai.azure.com/
       rpm: 100
   - model_name: gpt-4
