--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,21 @@ certifi = "^2023.7.22"
 appdirs = "^1.4.4"
 aiohttp = "*"
 
+uvicorn = {version = "^0.24.0.post1", optional = true}
+fastapi = {version = "^0.104.1", optional = true}
+backoff = {version = "*", optional = true}
+yaml = {version = "*", optional = true}
+rq = {version = "*", optional = true}
+
+[tool.poetry.extras]
+proxy = [
+    "uvicorn",
+    "fastapi",
+    "backoff",
+    "yaml",
+    "rq"
+]
+
 [tool.poetry.scripts]
 litellm = 'litellm:run_server'
 
