--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ litellm_server/config.yaml
 litellm/proxy/_secret_config.yaml
 .aws-sam/
 litellm/tests/aiologs.log
+litellm/tests/exception_data.txt
