--- a/litellm/proxy/otel_config.yaml
+++ b/litellm/proxy/otel_config.yaml
@@ -15,7 +15,7 @@ exporters:
   otlphttp/elastic:
     endpoint: "https://3f51c0abae7743e2800df44a8a5f0997.apm.us-central1.gcp.cloud.es.io:443"
     headers: 
-      Authorization: "Bearer elastic search key"
+      Authorization: "Bearer <elastic api key>"
 
 service:
   pipelines:
