--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,13 @@ extra_proxy = [
     "azure-keyvault-secrets"
 ]
 
+proxy_otel = [
+    "opentelemetry-api",
+    "opentelemetry-sdk",
+    "opentelemetry-exporter-otlp",
+    "opentelemetry-sdk-resources"
+]
+
 [tool.poetry.scripts]
 litellm = 'litellm:run_server'
 
