--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ litellm/proxy/_secret_config.yaml
 .aws-sam/
 litellm/tests/aiologs.log
 litellm/tests/exception_data.txt
+litellm/tests/config_*.yaml
