fix testing env

--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ jinja2==3.1.4 # for prompt templates
 certifi==2023.7.22 # [TODO] clean up 
 aiohttp==3.9.0 # for network calls
 aioboto3==12.3.0 # for async sagemaker calls
+cachetools==5.3.1 # for in memory caching
 tenacity==8.2.3  # for retrying requests, when litellm.num_retries set
 pydantic==2.7.1 # proxy + openai req.
 ijson==3.2.3 # for google ai studio streaming
