--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,7 @@ jobs:
             pip install "boto3==1.34.34"
             pip install "aioboto3==12.3.0"
             pip install langchain
+            pip install "cachetools==5.3.1"
             pip install lunary==0.2.5
             pip install "langfuse==2.27.1"
             pip install "logfire==0.29.0"
