--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,7 +89,7 @@ jobs:
           name: Linting Testing
           command: |
             cd litellm
-            python -m pip install types-requests types-setuptools types-redis types-PyYAML
+            python -m pip install types-requests types-setuptools types-redis types-PyYAML types-cachetools
             if ! python -m mypy . --ignore-missing-imports; then
               echo "mypy detected errors"
               exit 1
