--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,6 +124,7 @@ jobs:
             pip install pytest
             pip install tiktoken
             pip install aiohttp
+            pip install "cachetools==5.3.1"
             pip install click
             pip install jinja2
             pip install tokenizers
@@ -176,6 +177,7 @@ jobs:
             pip install "google-cloud-aiplatform==1.43.0"
             pip install pyarrow
             pip install "boto3==1.34.34"
+            pip install "cachetools==5.3.1"
             pip install "aioboto3==12.3.0"
             pip install langchain
             pip install "langfuse>=2.0.0"
