--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ jinja2 = "^3.1.2"
 aiohttp = "*"
 requests = "^2.31.0"
 pydantic = "^2.0.0"
+cachetools = ">=5.3.1"
 ijson = "*"
 
 uvicorn = {version = "^0.22.0", optional = true}
