--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,6 @@ jobs:
             pip install "boto3==1.34.34"
             pip install "aioboto3==12.3.0"
             pip install langchain
-            pip install "cachetools==5.3.1"
             pip install lunary==0.2.5
             pip install "langfuse==2.27.1"
             pip install "logfire==0.29.0"
@@ -89,7 +88,7 @@ jobs:
           name: Linting Testing
           command: |
             cd litellm
-            python -m pip install types-requests types-setuptools types-redis types-PyYAML types-cachetools
+            python -m pip install types-requests types-setuptools types-redis types-PyYAML
             if ! python -m mypy . --ignore-missing-imports; then
               echo "mypy detected errors"
               exit 1
@@ -124,7 +123,6 @@ jobs:
             pip install pytest
             pip install tiktoken
             pip install aiohttp
-            pip install "cachetools==5.3.1"
             pip install click
             pip install jinja2
             pip install tokenizers
@@ -177,7 +175,6 @@ jobs:
             pip install "google-cloud-aiplatform==1.43.0"
             pip install pyarrow
             pip install "boto3==1.34.34"
-            pip install "cachetools==5.3.1"
             pip install "aioboto3==12.3.0"
             pip install langchain
             pip install "langfuse>=2.0.0"
