--- a/litellm/proxy/_new_secret_config.yaml
+++ b/litellm/proxy/_new_secret_config.yaml
@@ -5,16 +5,15 @@ model_list:
       api_key: my-fake-key
       aws_bedrock_runtime_endpoint: http://127.0.0.1:8000
       mock_response: "Hello world 1"
-    model_info: 
-      max_input_tokens: 0 # trigger context window fallback
   - model_name: my-fake-model
     litellm_params:
       model: bedrock/anthropic.claude-3-sonnet-20240229-v1:0
       api_key: my-fake-key
       aws_bedrock_runtime_endpoint: http://127.0.0.1:8000
       mock_response: "Hello world 2"
-    model_info: 
-      max_input_tokens: 0
 
 router_settings:
   enable_pre_call_checks: True
+
+litellm_settings:
+  cache: true
