fix detect secrets test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,8 @@ jobs:
             pip install opentelemetry-sdk==1.25.0
             pip install opentelemetry-exporter-otlp==1.25.0
             pip install openai
-            pip install prisma            
+            pip install prisma   
+            pip install "detect_secrets==1.5.0"         
             pip install "httpx==0.24.1"
             pip install fastapi
             pip install "gunicorn==21.2.0"
