docs(anthropic.md): add claude-3-5-sonnet example to docs

--- a/litellm/proxy/_super_secret_config.yaml
+++ b/litellm/proxy/_super_secret_config.yaml
@@ -1,4 +1,7 @@
 model_list:
+- model_name: claude-3-5-sonnet
+  litellm_params:
+    model: anthropic/claude-3-5-sonnet
 - model_name: gemini-1.5-flash-gemini
   litellm_params:
     model: gemini/gemini-1.5-flash
