--- a/litellm/proxy/proxy_config.yaml
+++ b/litellm/proxy/proxy_config.yaml
@@ -23,12 +23,14 @@ general_settings:
   pass_through_endpoints:
     - path: "/v1/rerank"
       target: "https://api.cohere.com/v1/rerank"
+      auth: true # 👈 Key change to use LiteLLM Auth / Keys
       headers:
         Authorization: "bearer os.environ/COHERE_API_KEY"
         content-type: application/json
         accept: application/json
     - path: "/api/public/ingestion"
       target: "https://us.cloud.langfuse.com/api/public/ingestion"
+      auth: true
       headers:
         LANGFUSE_PUBLIC_KEY: "os.environ/LANGFUSE_DEV_PUBLIC_KEY"
         LANGFUSE_SECRET_KEY: "os.environ/LANGFUSE_DEV_SK_KEY"
