fix(router.py): disable cooldowns
allow admin to disable model cooldowns

--- a/litellm/proxy/_new_secret_config.yaml
+++ b/litellm/proxy/_new_secret_config.yaml
@@ -1,4 +1,5 @@
 model_list:
-  - model_name: "*"             # all requests where model not in your config go to this deployment
+  - model_name: claude-3-5-sonnet             # all requests where model not in your config go to this deployment
     litellm_params:
-      model: "openai/*"           
+      model: "openai/*"
+      mock_response: "litellm.RateLimitError"
