fix(slack_alerting.py): use in-memory cache for checking request status

--- a/litellm/proxy/_new_secret_config.yaml
+++ b/litellm/proxy/_new_secret_config.yaml
@@ -2,4 +2,8 @@ model_list:
   - model_name: claude-3-5-sonnet             # all requests where model not in your config go to this deployment
     litellm_params:
       model: "openai/*"
-      mock_response: "litellm.RateLimitError"
+      mock_response: "Hello world!"
+
+general_settings:
+  alerting: ["slack"]
+  alerting_threshold: 10
