fix(_service_logging.py): only trigger otel if in service_callback
Fixes https://github.com/BerriAI/litellm/issues/4511

--- a/litellm/proxy/_new_secret_config.yaml
+++ b/litellm/proxy/_new_secret_config.yaml
@@ -4,6 +4,10 @@ model_list:
       model: "openai/*"
       mock_response: "Hello world!"
 
+litellm_settings:
+  callbacks: ["otel"]
+  cache: True
+
 general_settings:
   alerting: ["slack"]
   alerting_threshold: 10
