fix(user_api_key_auth.py): expose `/health` as an info route
this still requires key access. Allows users to check model health

--- a/litellm/proxy/_super_secret_config.yaml
+++ b/litellm/proxy/_super_secret_config.yaml
@@ -2,10 +2,10 @@ model_list:
 - model_name: claude-3-5-sonnet
   litellm_params:
     model: anthropic/claude-3-5-sonnet
-- model_name: gemini-1.5-flash-gemini
-  litellm_params:
-    model: vertex_ai_beta/gemini-1.5-flash
-    api_base: https://gateway.ai.cloudflare.com/v1/fa4cdcab1f32b95ca3b53fd36043d691/test/google-vertex-ai/v1/projects/adroit-crow-413218/locations/us-central1/publishers/google/models/gemini-1.5-flash
+# - model_name: gemini-1.5-flash-gemini
+#   litellm_params:
+#     model: vertex_ai_beta/gemini-1.5-flash
+#     api_base: https://gateway.ai.cloudflare.com/v1/fa4cdcab1f32b95ca3b53fd36043d691/test/google-vertex-ai/v1/projects/adroit-crow-413218/locations/us-central1/publishers/google/models/gemini-1.5-flash
 - litellm_params:
     api_base: http://0.0.0.0:8080
     api_key: ''
