--- a/litellm/proxy/_super_secret_config.yaml
+++ b/litellm/proxy/_super_secret_config.yaml
@@ -1,7 +1,7 @@
 model_list:
 - model_name: claude-3-5-sonnet
   litellm_params:
-    model: anthropic/claude-3-5-sonnet
+    model: claude-3-haiku-20240307
 # - model_name: gemini-1.5-flash-gemini
 #   litellm_params:
 #     model: vertex_ai_beta/gemini-1.5-flash
