fix(types/router.py): add custom pricing info to 'model_info'
Fixes https://github.com/BerriAI/litellm/issues/4542

--- a/litellm/proxy/_super_secret_config.yaml
+++ b/litellm/proxy/_super_secret_config.yaml
@@ -9,9 +9,10 @@ model_list:
 - litellm_params:
     api_base: http://0.0.0.0:8080
     api_key: ''
-    model: openai/my-fake-model
+    model: gpt-4o
     rpm: 800
-  model_name: gpt-3.5-turbo-fake-model
+    input_cost_per_token: 300
+  model_name: gpt-4o
 - model_name: llama3-70b-8192
   litellm_params:
     model: groq/llama3-70b-8192
