--- a/litellm/proxy/_super_secret_config.yaml
+++ b/litellm/proxy/_super_secret_config.yaml
@@ -39,6 +39,9 @@ model_list:
     model: anthropic.claude-3-sonnet-20240229-v1:0
   model_name: bedrock-anthropic-claude-3
 - litellm_params:
+    model: claude-3-haiku-20240307
+  model_name: anthropic-claude-3
+- litellm_params:
     api_base: https://openai-gpt-4-test-v-1.openai.azure.com/
     api_key: os.environ/AZURE_API_KEY
     api_version: 2024-02-15-preview
