fix(proxy_server.py): support langfuse logging for rejected requests on `/v1/chat/completions`

--- a/litellm/proxy/_new_secret_config.yaml
+++ b/litellm/proxy/_new_secret_config.yaml
@@ -1,12 +1,12 @@
 model_list:
-  - model_name: claude-3-5-sonnet             # all requests where model not in your config go to this deployment
+  - model_name: "*"             
     litellm_params:
       model: "openai/*"
       mock_response: "Hello world!"
 
 litellm_settings:
-  callbacks: ["otel"]
-  cache: True
+  success_callback: ["langfuse"]
+  failure_callback: ["langfuse"]
 
 general_settings:
   alerting: ["slack"]
