--- a/litellm/proxy/_new_secret_config.yaml
+++ b/litellm/proxy/_new_secret_config.yaml
@@ -1,12 +1,9 @@
 model_list:
-  - model_name: "*"             
+  - model_name: tts
     litellm_params:
-      model: "openai/*"
-      mock_response: "Hello world!"
-
-litellm_settings:
-  success_callback: ["langfuse"]
-  failure_callback: ["langfuse"]
+      model: openai/tts-1
+      api_key: os.environ/OPENAI_API_KEY
+      input_cost_per_character: 0.000015,
 
 general_settings:
   alerting: ["slack"]
