--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ azure-identity = {version = "^1.15.0", optional = true}
 azure-keyvault-secrets = {version = "^4.8.0", optional = true}
 google-cloud-kms = {version = "^2.21.3", optional = true}
 resend = {version = "^0.8.0", optional = true}
+pynacl = {version = "^1.5.0", optional = true}
 
 [tool.poetry.extras]
 proxy = [
@@ -90,7 +91,7 @@ requires = ["poetry-core", "wheel"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.commitizen]
-version = "1.41.8"
+version = "1.41.10"
 version_files = [
     "pyproject.toml:^version"
 ]
