fix(utils.py): cleanup 'additionalProperties=False' for tool calling with zod
Fixes issue with zod passing in additionalProperties=False, causing vertex ai / gemini calls to fail

--- a/litellm/proxy/_new_secret_config.yaml
+++ b/litellm/proxy/_new_secret_config.yaml
@@ -2,8 +2,9 @@ model_list:
   - model_name: tts
     litellm_params:
       model: "openai/*"
-litellm_settings:
-  success_callback: ["langfuse"]
+  - model_name: gemini-1.5-flash
+    litellm_params:
+      model: gemini/gemini-1.5-flash
 
 general_settings:
   alerting: ["slack"]
