--- a/litellm/proxy/_new_secret_config.yaml
+++ b/litellm/proxy/_new_secret_config.yaml
@@ -5,6 +5,16 @@ model_list:
   - model_name: gemini-1.5-flash
     litellm_params:
       model: gemini/gemini-1.5-flash
+  - model_name: whisper
+    litellm_params:
+      model: azure/azure-whisper
+      api_version: 2024-02-15-preview
+      api_base: os.environ/AZURE_EUROPE_API_BASE
+      api_key: os.environ/AZURE_EUROPE_API_KEY
+    model_info:
+      mode: audio_transcription
+
+
 
 general_settings:
   alerting: ["slack"]
