Add prisma binary_cache_dir specification to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -98,3 +98,7 @@ version_files = [
 
 [tool.mypy]
 plugins = "pydantic.mypy"
+
+[tool.prisma]
+# cache engine binaries in a directory relative to your project
+binary_cache_dir = '.binaries'
