feat(proxy_server.py): working `/v1/messages` with config.yaml
Adds async router support for adapter_completion call

--- a/litellm/proxy/_new_secret_config.yaml
+++ b/litellm/proxy/_new_secret_config.yaml
@@ -2,7 +2,9 @@ model_list:
   - model_name: "*"
     litellm_params:
       model: "openai/*"
-
+  - model_name: claude-3-5-sonnet-20240620
+    litellm_params:
+      model: gpt-3.5-turbo
 
 
 general_settings:
