--- a/litellm/proxy/proxy_config.yaml
+++ b/litellm/proxy/proxy_config.yaml
@@ -35,6 +35,8 @@ general_settings:
         LANGFUSE_SECRET_KEY: "os.environ/LANGFUSE_DEV_SK_KEY"
 
 litellm_settings:
+  cache: true
+  callbacks: ["otel"]
   guardrails:
     - prompt_injection:
         callbacks: [lakera_prompt_injection, hide_secrets]
