--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -305,13 +305,15 @@ jobs:
           command: docker build -t my-app:latest -f Dockerfile.database .
       - run:
           name: Run Docker container
+          # intentionally give bad redis credentials here
+          # the OTEL test - should get this as a trace
           command: |
             docker run -d \
               -p 4000:4000 \
               -e DATABASE_URL=$PROXY_DATABASE_URL \
-              -e REDIS_HOST=$REDIS_HOST \
-              -e REDIS_PASSWORD=$REDIS_PASSWORD \
-              -e REDIS_PORT=$REDIS_PORT \
+              -e REDIS_HOST=bad-credentials \
+              -e REDIS_PASSWORD=bad-credentials \
+              -e REDIS_PORT=bad-credentials \
               -e OPENAI_API_KEY=$OPENAI_API_KEY \
               -e LITELLM_LICENSE=$LITELLM_LICENSE \
               -e OTEL_EXPORTER="in_memory" \
