--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -243,7 +243,7 @@ jobs:
           command: |
             pwd
             ls
-            python -m pytest -vv tests/ -x --junitxml=test-results/junit.xml --durations=5
+            python -m pytest -vv tests/ -x --junitxml=test-results/junit.xml --durations=5 "not test_otel.py"
           no_output_timeout: 120m
 
       # Store test results
